# pypyrus

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  run_timing.txt
docs/: cli-usage.md  custom-dataset-integration.md  distributed-training-support.md  docs.md  internal-working-notes.md  requirements.yaml  sample-id-resolver-architecture.md  sample-identity-contract.md  sdk-quickstart.md
examples/: compare_two_runs.py  inspect_batches.py  test_dataloader_instrumentation.py  train_simple_mlp.py  validate_dataloader_clone_equivalence.py
experiments/: __init__.py  baseline-reproducibility-match.md  baseline_buffered_store_timing.py  experiment-plan.md  run_baseline_reproducibility_match.py
logs/: pypyrus_buffer_compare_28248098.out  pypyrus_instr_compare_28241796.err  pypyrus_instr_compare_28241796.out  pypyrus_instr_compare_28242781.err  pypyrus_instr_compare_28242781.out  pypyrus_instr_compare_28242921.err  pypyrus_instr_compare_28242921.out  pypyrus_instr_compare_28242927.out  pypyrus_instr_compare_28243285.err  pypyrus_instr_compare_28243285.out  pypyrus_instr_compare_28244221.out  pypyrus_instr_compare_28244468.out  pypyrus_overhead_28446504.err  pypyrus_overhead_28446504.out  pypyrus_overhead_28446539.out  pypyrus_overhead_28447522.out  pypyrus_overhead_28462518.out  pypyrus_overhead_28462520.out  pypyrus_overhead_bsweep_28490137.err  pypyrus_overhead_bsweep_28490137.out  pypyrus_overhead_bsweep_28492468.out  pypyrus_overhead_bsweep_28493910.err  pypyrus_overhead_bsweep_28494149.out  pypyrus_overhead_bsweep_28496429.out  sysinfo_28462649.out  (+6 more)
(+115 files in other folders)
