[project]
name = "pypyrus"
version = "0.1.0"
description = "Data provenance layer for reproducible ML training"
requires-python = ">=3.9"

dependencies = [
    "torch",
    "torchvision"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["pypyrus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
